--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+.header {
+  background-color: #fad3cf;
+  color: #492c89;
+}
+
+.nav-item {
+  color: #a696c8;
+}
+
 .App {
   text-align: center;
 }
